# Snake

./: .gitignore  CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
Snake/: CMakeLists.txt  Snake.c  Snake.h
